third_party/move/move-compiler-v2/tests/uninit-use-checker/assign_in_one_if_branch_unfoldable.move
script {
fun main(p1: bool, p2: bool) {
    let x;
    let y;
    if (p1) x = 5 else ();
    if (p2) y = 5;
    x == y;
}
}

// check: COPYLOC_UNAVAILABLE_ERROR
